<resources>
    <string name="app_name">PasswordEncrypto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="content_description_save">Save your password</string>
    <string name="savelist">saved list</string>
    <string name="copy">copy</string>
    <string name="content_description_delete">copy generated password</string>
    <string name="more">more</string>
    <string name="content_description_more">More</string>
</resources>