<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/savelist"
        android:contentDescription="@string/content_description_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/copy"
        android:contentDescription="@string/content_description_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />

</menu>